fix: include left-out namespace and org metadata
some fixes for #91:

Fixes the Metadata element of Namespace to refer to its own metadata instead of models::sample::Metadata.
Fixes the Metadata element of Organization to refer to its own metadata instead of models::subject::Metadata or models::file::Metadata.

Fixes a reference to "StudyFundingOrganization" in place of StudyFundingId.

Adds the following elements to swagger.yml:

cde.v1.namespace.StudyFundingId
cde.v1.namespace.StudyId
cde.v1.namespace.StudyName
cde.v1.namespace.StudyShortTitle
cde.v1.organization.Institution

field.unowned.namespace.StudyFundingId
field.unowned.namespace.StudyId
field.unowned.namespace.StudyName
field.unowned.namespace.StudyShortTitle
field.unowned.organization.Institution

models.namespace.Metadata
models.organization.Metadata
